Revision history for Perl module Time::Progress

1.91 2015-08-23 CADE
  - Removed redundant =cut at the end of the file, which was resulting
    in a pod warning.
  - Added a SEE ALSO section to the pod.

1.9 2015-08-23 CADE (changes from NEILB)
  - Added some basic tests that are checking correct behaviour.
  - Removed META.yml from repo, as it's generated by ExtUtils::MakeMaker
  - Changed two uses of indirect method notation in the doc to use direct.
  - Moved demo.pl to examples/demo.pl
  - Dropped usage of Exporter, as the module doesn't export anything.
  - Specified min perl version as 5.006 in code and dist metadata.
  - Added prereqs to Makefile.PL
  - Github repo now listed in the dist metadata.
  - Added COPYRIGHT AND LICENSE section to doc
  - Reformatted this file as per CPAN::Changes::Spec

1.8 2013-07-08 CADE
  - more spelling
  - published to github
  - fixed docs

1.7 2010-09-10 CADE
  - fixed spelling (note by Salvatore Bonaccorso)

1.6 2010-09-08 CADE
  - fixed helpers (note by Andreas Koenig)

1.5 2009-02-06 CADE
  - %LlEe formats can take optional width (%10e for example)

1.4 2009-02-03 CADE
  - relicensed under same terms as Perl (i.e. incl. Artistic)

1.3 2007-11-29 CADE
  - examples use positive numbers (note by  Johan Lindstrom)
  - reset() may be used as attr()

1.2 2005-08-25 CADE
  - estimate_str() fixed
  - example in POD fixed

1.0 2001-10-21 CADE
  - Initial release to CPAN
