@@ -4,6 +4,7 @@ Revision history for Perl module Time::Progress
   - Removed redundant =cut at the end of the file, which was resulting
     in a pod warning.
   - Added a SEE ALSO section to the pod.
+  - Shortened the SYNOPSIS and expanded the DESCRIPTION.
 
 1.9 2015-08-23 CADE (changes from NEILB)
   - Added some basic tests that are checking correct behaviour.
